--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
   ],
   "dependencies": {
     "axios": "^0.19.2",
-    "bulma": "^0.8.2",
-    "sip.js": "0.15.10"
+    "bulma": "^0.8.2"
   }
 }
