feat(SIP.js): upgrade sip.js version

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   ],
   "dependencies": {
     "axios": "^0.19.2",
-    "bulma": "^0.8.2"
+    "bulma": "^0.8.2",
+    "sip.js": "^0.16.1"
   }
 }
