--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rollup-plugin-terser": "^5.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
