--- a/package.json
+++ b/package.json
@@ -42,27 +42,21 @@
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-json": "^4.0.3",
-    "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/events": "^3.0.0",
     "@types/node": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "@wessberg/rollup-plugin-ts": "^1.2.24",
     "babel-loader": "^8.1.0",
     "dotenv-webpack": "^1.8.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
     "parcel-bundler": "^1.6.1",
     "prettier": "^2.0.4",
-    "rollup-plugin-inject-process-env": "^1.2.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-terser": "^5.3.0",
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
@@ -76,7 +70,7 @@
   ],
   "dependencies": {
     "axios": "^0.19.2",
-    "bulma": "^0.8.2",
+    "pusher-js": "^4.0.0",
     "sip.js": "^0.16.1"
   }
 }
