--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/events": "^3.0.0",
     "@types/node": "^13.11.1",
+    "@types/pusher-js": "^4.2.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-loader": "^8.1.0",
