--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,8 @@
     "@babel/syntax-dynamic-import",
     "@babel/proposal-object-rest-spread",
     "@babel/transform-regenerator",
-    "@babel/transform-runtime"
+    "@babel/transform-runtime",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-optional-chaining"
   ]
 }
