--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "webpack-merge": "^4.2.2"
   },
   "keywords": [
-    "typescript",
+    "toky-sdk",
     "javascript"
   ],
   "dependencies": {
