fix: some improvements for example onboarding

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 TOKY_API_URL="https://api.toky.co"
 TOKY_RESOURCES_URL="https://app.toky.co"
 PUSHER_KEY=""
+# only for development
+# your Toky Agent id account
+AGENT_ID=""
