--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv-webpack": "^1.8.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-jsdoc": "^31.6.1",
     "eslint-plugin-prettier": "^3.1.2",
     "fork-ts-checker-webpack-plugin": "^5.2.0",
     "git-revision-webpack-plugin": "^3.0.6",
