--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-regenerator": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.16",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
     "@types/events": "^3.0.0",
