--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "scripts": {
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "webpack-dev-server": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "serve": "npx webpack serve",
     "debug": "node --inspect --inspect-brk ./node_modules/webpack/bin/webpack.js",
-    "build": "npm run webpack -- --env.mode production",
-    "dev": "npm run webpack-dev-server -- --env.mode development",
-    "build:dev": "npm run webpack -- --env.mode development",
-    "build:staging": "npm run webpack -- --env.mode staging",
+    "build": "npm run webpack -- --mode production",
+    "dev": "npm run serve -- --mode development",
+    "build:dev": "npm run webpack -- --mode development",
+    "build:staging": "npm run webpack -- --mode staging",
     "build:types": "tsc --emitDeclarationOnly",
-    "prod:debug": "npm run debug -- --env.mode production",
-    "dev:debug": "npm run debug -- --env.mode development",
+    "prod:debug": "npm run debug -- --mode production",
+    "dev:debug": "npm run debug -- --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit && eslint 'src/**/*.{js,ts,tsx}' --quiet --fix"
   },
@@ -34,46 +34,47 @@
     "last 2 Chrome versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-proposal-optional-chaining": "^7.14.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-regenerator": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.7",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/events": "^3.0.0",
-    "@types/node": "^13.11.1",
+    "@types/node": "^16.11.1",
     "@types/pusher-js": "^4.2.2",
-    "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "babel-loader": "^8.2.2",
-    "dotenv-webpack": "^1.8.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-jsdoc": "^31.6.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "fork-ts-checker-webpack-plugin": "^5.2.0",
-    "git-revision-webpack-plugin": "^3.0.6",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.1.3",
-    "prettier": "^2.3.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^4.2.2"
+    "clean-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^7.0.3",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^36.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.6",
+    "git-revision-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.4.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   },
   "keywords": [
     "toky-sdk",
     "javascript"
   ],
   "dependencies": {
-    "axios": "^0.21.1",
-    "pusher-js": "^4.0.0",
+    "axios": "^0.23.0",
+    "pusher-js": "^4.4.0",
     "sip.js": "^0.16.1"
   }
 }
