--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "toky-phone-js-sdk",
-  "version": "0.6.0",
+  "version": "0.7.2",
   "description": "Toky Phone JS SDK v1",
-  "main": "dist/toky-sdk-alpha.js",
-  "module": "dist/toky-sdk-alpha.js",
-  "typings": "dist/types/index.d.ts",
-  "author": "Toky team",
+  "main": "./dist/toky-sdk-alpha.js",
+  "module": "./dist/toky-sdk-alpha.js",
+  "types": "./dist/types/index.d.ts",
+  "author": "Toky Team",
   "directories": {
     "example": "example",
     "test": "test"
@@ -34,7 +34,7 @@
     "last 2 Chrome versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.17.0",
+    "@babel/core": "^7.17.2",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-object-rest-spread": "^7.16.7",
     "@babel/plugin-proposal-optional-chaining": "^7.16.7",
@@ -44,18 +44,18 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
     "@types/events": "^3.0.0",
-    "@types/node": "^17.0.14",
+    "@types/node": "^17.0.17",
     "@types/pusher-js": "^4.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jsdoc": "^37.7.1",
+    "eslint-plugin-jsdoc": "^37.8.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "fork-ts-checker-webpack-plugin": "^7.0.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.0",
     "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
