Updated .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 TOKY_API_URL="https://api.toky.co"
 TOKY_RESOURCES_URL="https://app.toky.co"
-PUSHER_KEY=""
+PUSHER_KEY="" # Warm transfer feature
+AGENT_ID="" # Your Toky Agent Id
