Updated project dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,7 +63,7 @@
 
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "dist", "src/script.ts"]
 }
